--- a/index.html
+++ b/index.html
@@ -33,13 +33,10 @@
 	    
       // retorna un color con base en la cantidad de especies
       function color(d) {
-	return d > 25 ? '#67000d' :
-	       d > 20 ? '#a50f15' :
-	       d > 15 ? '#cb181d' :
-	       d > 10 ? '#ef3b2c' :
-	       d >  5 ? '#fb6a4a' :
-	       d >  3 ? '#fc9272' :
-		        '#fcbba1';
+	return d > 60 ? '#d7191c' :
+	       d > 40 ? '#fec980' :
+	       d > 20 ? '#c7e6db' :
+	       	        '#2c7bd6';
       }	    
       function infoRiqueza(feature, layer) {
 	var popupContent = "Riqueza de especies: ";
