--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <body>
     <h1>Riqueza de especies de aves acuáticas residentes en los sitios Ramsar de Costa Rica</h1>
     <div id='map'></div>
+    <div id='mapid'></div>
+  
 
     <script src="js/riqespecies_avesacures-cr_ramsar-2017-wgs84.js" type="text/javascript"></script>
     <script src="js/regPresGBIFAvesAcuRes-cr_ramsar-2017-wgs84.js"  type="text/javascript"></script>
