--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       var mapa = L.map('map').setView([9.7, -84], 8);
       var osm  = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
       attribution: '<a href="http://www.openstreetmap.org/">OpenStreetMap</a>'
-      });
+      })addTo(map);
      
 	    
       var mymap = L.map('mapid').setView([10, -84], 13);
