--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       var mapa = L.map('map').setView([9.7, -84], 8);
       var osm  = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
       attribution: '<a href="http://www.openstreetmap.org/">OpenStreetMap</a>'
-      })addTo(map);
+      })osm.addTo(map);
      
 	    
-      var mymap = L.map('mapid').setView([10, -84], 13);
-      L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiZ2ViZXJtdWRleiIsImEiOiJjajg1NnFuMDYwOHZsMnF1ZDJycTJhcWQ4In0.-sG176f_AzqyGxEnyzQvbw', {
+      var mymap = L.map('mapid').setView([10, -84], 8);
+      var mapbox  L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiZ2ViZXJtdWRleiIsImEiOiJjajg1NnFuMDYwOHZsMnF1ZDJycTJhcWQ4In0.-sG176f_AzqyGxEnyzQvbw', {
       attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
       maxZoom: 20,
       minZoom: 8,
