--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
       id: 'mapbox.satellite',
       accessToken: 'pk.eyJ1IjoiZ2ViZXJtdWRleiIsImEiOiJjajg1NnFuMDYwOHZsMnF1ZDJycTJhcWQ4In0.-sG176f_AzqyGxEnyzQvbw'
-      });
+      });mbox.addTo(map);
       
   	    
       // retorna un color con base en la cantidad de especies
